--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17132" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cXS-uy-K0n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cXS-uy-K0n">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17105.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Hosting Controller-->
+        <scene sceneID="a3D-Hv-gv4">
+            <objects>
+                <hostingController id="xwM-HV-aWP" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zjI-eN-a46" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2138" y="-1504"/>
+        </scene>
         <!--Playback View Controller-->
         <scene sceneID="qqr-4I-6Cw">
             <objects>
@@ -117,13 +125,22 @@
                                 <action selector="closeShow" destination="yak-cE-mUi" id="VCR-o0-Q9b"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="slider.horizontal.3" catalog="system" id="qmm-VS-QCJ">
-                            <connections>
-                                <segue destination="KhK-Tw-yaI" kind="presentation" destinationCreationSelector="SettingsSegue:" id="X1M-em-kSA"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem image="slider.horizontal.3" catalog="system" id="qmm-VS-QCJ">
+                                <connections>
+                                    <segue destination="KhK-Tw-yaI" kind="presentation" destinationCreationSelector="settingsSegue:" id="X1M-em-kSA"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="exclamationmark.circle" catalog="system" id="8fW-IC-D3F">
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <connections>
+                                    <segue destination="xwM-HV-aWP" kind="presentation" destinationCreationSelector="missingStingsSegue:" id="BsP-EH-lwq"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="missingStingsButton" destination="8fW-IC-D3F" id="u7b-BK-RCK"/>
                         <segue destination="nGG-by-uzG" kind="presentation" identifier="Edit Sting" id="7h3-gk-nqV"/>
                     </connections>
                 </collectionViewController>
@@ -207,7 +224,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Oy-Y8-dK5" userLabel="Preview End">
-                                        <rect key="frame" x="256" y="0.0" width="48.5" height="42"/>
+                                        <rect key="frame" x="255.5" y="0.0" width="49" height="42"/>
                                         <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
                                         <state key="normal" image="play" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
@@ -217,7 +234,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="200" horizontalCompressionResistancePriority="800" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l5b-3m-bXs" userLabel="Stop Preview">
-                                        <rect key="frame" x="24.5" y="0.0" width="231.5" height="42"/>
+                                        <rect key="frame" x="24.5" y="0.0" width="231" height="42"/>
                                         <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                         <state key="normal" image="stop" catalog="system"/>
                                         <connections>
@@ -382,7 +399,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ynt-qd-GCJ">
-                            <rect key="frame" x="0.0" y="2.5" width="18.5" height="22"/>
+                            <rect key="frame" x="0.0" y="2.5" width="19" height="22"/>
                             <state key="normal" image="play" catalog="system">
                                 <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
@@ -485,7 +502,8 @@
     <resources>
         <image name="1.magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="circle" catalog="system" width="128" height="121"/>
-        <image name="play" catalog="system" width="116" height="128"/>
+        <image name="exclamationmark.circle" catalog="system" width="128" height="121"/>
+        <image name="play" catalog="system" width="120" height="128"/>
         <image name="slider.horizontal.3" catalog="system" width="128" height="100"/>
         <image name="stop" catalog="system" width="128" height="113"/>
         <image name="waveload" width="280" height="75"/>
@@ -503,6 +521,9 @@
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
